# kube-saver

./: Cargo.toml  Dockerfile  README.md
.github/workflow/: docker.yaml
.github/workflows/: ci.yaml  codecov.yaml  docker.yaml  integration.yaml
examples/: deployment-slack-token.yaml  example.md  rules-all-cronjob.yaml  rules-all-deploy.yaml  rules-all-hpa.yaml  rules-all-ns.yaml  rules-all-ss.yaml  rules-app-all.yaml  rules-configure-slack.yaml  rules-downtime-aftermidnight.yaml  rules-up-all-weekdays.yaml
k8s/: install.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  rules.yaml
k8s/crds/: crd.yaml  upscaler.yaml
k8s/examples/: deployment.yaml
src/: crd.rs  csv.rs  deployment.rs  finalizer.rs  lib.rs  main.rs  slack.rs  time_check.rs  upscaler.rs  util.rs
src/controller/: common.rs  crd.rs  finalizer.rs  mod.rs  upscaler.rs  watcher.rs
src/downscaler/: mod.rs  processor.rs  types.rs
src/downscaler/resource/: common.rs  cronjob.rs  deployment.rs  hpa.rs  mod.rs  namespace.rs  statefulset.rs
src/utils/: csv.rs  error.rs  mod.rs  parser.rs  slack.rs  time_check.rs
tests/: deploy.sh  integration.rs  mod.rs
tests/cluster/: integration.rs  mod.rs  util.rs
tests/controller/: kustomization.yaml
tests/data/: crd.yaml  test-cronjob9.yaml  test-deploy1.yaml  test-deploy2.yaml  test-deploy4.yaml  test-deploy5.yaml  test-hpa10.yaml  test-hpa12.yaml  test-hpa12a.yaml  test-hpa12b.yaml  test-hpa12c.yaml  test-ignore-downscale-14.yaml  test-resources13.yaml  test-scaledown-scaledupresource.yaml  test-statefulset6.yaml  test_scaleup_scaleddownresource.yaml
tests/data/crds/: crd.yaml
tests/downscaler/: mod.rs  processor.rs  upscaler.rs
tests/integration/: int.rs  mod.rs
tests/rules/: rules1.yaml  rules10.yaml  rules11.yaml  rules12.yaml  rules12a.yaml  rules12b.yaml  rules12c.yaml  rules13.yaml  rules14.yaml  rules2.yaml  rules3.yaml  rules4.yaml  rules5.yaml  rules6.yaml  rules7.yaml  rules8.yaml  rules9.yaml
tests/upscaler/: upscaler-scaleup13.yaml
